# ChangeLog for www-servers/nginx
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -nginx-0.8.30-r51.ebuild, +nginx-0.8.33.ebuild:
  add new

  12 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -nginx-0.8.29-r51.ebuild, -nginx-0.8.31-r50.ebuild:
  drop old version

  12 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> +nginx-0.8.32.ebuild,
  metadata.xml:
  version bump,scgi support

  15 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru> -nginx-0.8.28-r50.ebuild:
  delete old ebuild	

  15 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>+nginx-0.8.29-r51.ebuild, 
  metadata.xml: add chunk use flag

  06 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  nginx-0.8.28-r50.ebuild, nginx-0.8.29-r50.ebuild:
  fix bad depend

  01 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +nginx-0.8.29-r50.ebuild:
  version bump

  27 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -nginx-0.8.29-r50.ebuild, -nginx-0.8.30-r50.ebuild,
  +nginx-0.8.31-r50.ebuild:
  delete old ebuild

  27 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +nginx-0.8.31-r50.ebuild:
  new minor version

  20 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +nginx-0.8.30-r51.ebuild, metadata.xml:
  add use libatomic

  19 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +nginx-0.8.30-r50.ebuild:
  nginx-0.8.30

  27 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -nginx-0.8.22-r50.ebuild:
  delete nginx-0.8.22-r50.ebuild renegotiation vulnerability in SSL protocol

  27 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -nginx-0.8.21-r50.ebuild:
  delete old version

  27 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +nginx-0.8.28-r50.ebuild:
  add new dev. version

  10 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +nginx-0.8.22-r50.ebuild:
  version bump

  08 Nov 2009; <slep@gentoo.org> -nginx-0.8.20-r50.ebuild:
  remove old version

  8 Noj 2009; A. Vinogradov <spamslepnoga@inbox.ru>