@@ -8,15 +8,11 @@ DIST Ngx_rrd_graph-0.1.tar.gz 4005 RMD160 7ae96d110e748b2f4457545440c777918c145b
 DIST chunkin-nginx-module-0.16.tgz 78612 RMD160 c8cf529ea3bd1bfb7cd06ce63cf82896fbbbfe33 SHA1 3b8e1d0bc17973060599e6a7299512e164763e6c SHA256 d5714c2e2861306a5f63ce12dc558be61e462eeca353596c74c680662b92ea6c
 DIST chunkin-nginx-module-0.19.tgz 84817 RMD160 421457c805701d1bf740caad6d36163a32bfcfba SHA1 bb1a39de6a93db76946ea936564c6a36825ee5a1 SHA256 fb5494cf8bf449b01c73b49c5da39da614ae32be55b4dd354633e1b2dce770f0
 DIST mod_scgi-b466baa5fcdb.tar.gz 10947 RMD160 dcf8f5dae78a1ec068afcc1f0b35dca093db5ba7 SHA1 b2eae98cd08675da21ee1f58ecab50574f9ba1fe SHA256 d6172ae5ce7608d9fe0e08f0e43debf6f24857216e8c4a420a1e6b1deb0ddd3f
-DIST nginx-0.8.32.tar.gz 619865 RMD160 4abacc587bf5fb400933d48bbbd7e92283de8683 SHA1 03c8177ec4943a9f7c33dbd20b1ef5d8dd5a0f9b SHA256 31f70b30ad0838615acb580eef40576f59d96ef72a1e276af2049f6ed4da189a
-DIST nginx-0.8.33.tar.gz 620448 RMD160 3ab3ea6d07fcac74465dbf40af824fccfd7f5fdd SHA1 bf3e3ab90609a62e8896f49895c3f4b4fa308270 SHA256 4366fa657a31f841944498c55bed3f2d18abeaeee4114873f3087033d629074e
 DIST nginx-0.8.34.tar.gz 621534 RMD160 9472f7d2b7b456d54fdc8e4c8dcb35e6531d4a67 SHA1 bf9a291ee7c20ea6aca4e785af59c8b662ec1d24 SHA256 f7cf3bcd0dcd3473ebff76aeee12974112d035737a2fc7f38b0a190f3a2949f6
 DIST nginx_mp4_streaming_public_20081229.tar.bz2 9469 RMD160 ec4c8a0ef86db6cf63f4697546462b127305f5a8 SHA1 ad909c369fa092b6ff457c599213d567a8a66936 SHA256 4908709c50f73d73cb1c16136eaca4b280d8abb60dfd302e79c48f71a68c5d3e
 DIST ngx_http_auth_pam_module-1.1.tar.gz 5193 RMD160 38437a1f5d34f93b22abb9f0a7181be756356d33 SHA1 d04065a512169925dda8bce710e1dc5012cac47b SHA256 ea9da5f106b952729398248cddabbe25f7a5752993e91c9b8252dbc2b03b8ecd
 DIST passenger-2.2.11.tar.gz 2058085 RMD160 54ee5ab25155adaf4b6be9dc0aee190a323254e5 SHA1 9c38d364f59cb72c14a2f4c22445252468f08c4e SHA256 9d4aa14a4dfe9daa713aa19a787e1a5bee0db9f3625e17ffebe1e5325aa20a88
-EBUILD nginx-0.8.32.ebuild 5809 RMD160 650f1235460a9b625711a6304e0f716b304441b6 SHA1 60a8a70f1f271e2405c346cca06251e5cf7ec60d SHA256 3e8825426bd28aaf4cf278dcddf7ce709a8b69f8eb5711e46a40e74f011e84bd
-EBUILD nginx-0.8.33.ebuild 5809 RMD160 650f1235460a9b625711a6304e0f716b304441b6 SHA1 60a8a70f1f271e2405c346cca06251e5cf7ec60d SHA256 3e8825426bd28aaf4cf278dcddf7ce709a8b69f8eb5711e46a40e74f011e84bd
-EBUILD nginx-0.8.34-r1.ebuild 8299 RMD160 17ca6472e8f6f775e9f7ec3b308a03360fead43a SHA1 587362b4da81565f397574bcace8fc87728d44bb SHA256 deb1eb8e3e6cb657467b5ecc2823ad59911b2095f442011d7a6011fe92037308
+EBUILD nginx-0.8.34-r1.ebuild 8234 RMD160 44ced4028afc5cd09ad020740b7bb81e33a77a2e SHA1 55452a6e9ecc98af4ae1e3f27fdaf70ec78171d5 SHA256 88bee8df53d83c5022345cf6294eb7bb1549ad38ebeabce694fe8ec2b735ffa5
 EBUILD nginx-0.8.34.ebuild 5809 RMD160 650f1235460a9b625711a6304e0f716b304441b6 SHA1 60a8a70f1f271e2405c346cca06251e5cf7ec60d SHA256 3e8825426bd28aaf4cf278dcddf7ce709a8b69f8eb5711e46a40e74f011e84bd
-MISC ChangeLog 2352 RMD160 d6e2f56cb2082754db7c820d26aad7eff05bcedb SHA1 80da276a30f9c75db18f1f1e3ab67069eb456896 SHA256 fcff4340a4f767e30edc40a6e61a99dbdeb3c4ce5c89dc60fee5828e53bee8ea
-MISC metadata.xml 1559 RMD160 86ed53d30fa97f3c86b7bbd3b07b5ae25b3ee972 SHA1 668acc9b00fe784287e32c7cf2c0c65f48fbeedf SHA256 f58b649a8e960149ee95f99b5da9592cd995e58064d1731fb13b8225843876bb
+MISC ChangeLog 2571 RMD160 648568d0bf804341748156149d9ee7caa511ac6d SHA1 2ad3324e5440e9f4d109ddd590974537e6815a56 SHA256 429518715b13df3247fcc9e6e1acab28ab3ed567be28eb9dfe24b20c2f5c0ba2
+MISC metadata.xml 1717 RMD160 21b2d1d5cee3b286f523a77b54060c9245687c68 SHA1 10ff97d9c0b3c133768cbb7249aa142bce6123c9 SHA256 ffff5c210045c07f4a0a22cd2f21bc81131b4f96ce0e108e8b6fc59b08c0f53a
